<resources>
    <string name="app_name">Todoister</string>
    <string name="action_settings">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_description">Testing this thing..</string>
    <string name="tv_title">Title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_todo_hint">e.g., Eat less at dinner</string>
    <string name="today_calendar_button">Today</string>
    <string name="empty_field">Empty task</string>
    <string name="due_date_text">Due Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_wknd">This Weekend</string>
    <string name="next_week">Next Week</string>
    <string name="radio_high">High</string>
    <string name="radio_med">Medium</string>
    <string name="radio_low">Low</string>
    <string name="image_description">button image</string>
    <string name="add_todos">Add a Todo...</string>
    <string name="email">Email</string>
    <string name="name">Full name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="app_to_manage_your_tasks">App to manage your tasks</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="fri_may_20">Fri, May 20</string>
    <string name="high">High</string>
    <string name="saved_successfully">Task has been saved successfully</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="updated_successfully">Task has been updated successfully</string>
    <string name="something_wrong_with_due_date_or_priority">Something wrong with priority or due date</string>
    <string name="log_out">Log out</string>
    <string name="empty_list_header">What tasks are on your mind?</string>
    <string name="empty_list_msg">Click the \'+\' button to create new task</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>