<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    style="@style/Animation.Design.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/dimen_32"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <EditText
                android:id="@+id/enter_todo_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:hint="@string/enter_todo_hint"
                android:inputType="textPersonName"
                android:padding="@dimen/dimen_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/today_calendar_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/image_description"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:textAllCaps="false"
                    android:text="@string/fri_may_20"
                    app:chipStartPadding="12dp"
                    app:chipEndPadding="12dp"
                    app:chipIcon="@drawable/ic_baseline_calendar_today_24"
                    app:chipIconSize="18dp"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/priority_todo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_toEndOf="@+id/today_calendar_button"
                    android:background="@android:color/transparent"
                    android:text="@string/high"
                    android:layout_alignParentTop="true"
                    app:chipStartPadding="12dp"
                    app:chipEndPadding="12dp"
                    app:chipIcon="@drawable/ic_baseline_outlined_flag_24"
                    app:chipIconSize="18dp"
                    android:contentDescription="@string/image_description"
                    tools:ignore="RelativeOverlap" />

                <ImageButton
                    android:id="@+id/save_todo_button"
                    android:layout_width="64dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/priority_todo_button"
                    app:srcCompat="@drawable/ic_baseline_arrow_circle_up_24"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"/>


            </RelativeLayout>

            <RadioGroup
                android:id="@+id/radioGroup_priority"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_10"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priority_todo_button">

                <RadioButton
                    android:id="@+id/radioButton_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#C91517"
                    android:text="@string/radio_high" />

                <RadioButton
                    android:id="@+id/radioButton_med"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFB300"
                    android:text="@string/radio_med" />

                <RadioButton
                    android:id="@+id/radioButton_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:text="@string/radio_low" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/calendar_group">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/due_date_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/priority_todo_button"
                    tools:ignore="NotSibling" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/today_chip"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/today"
                    app:chipEndPadding="12dp"
                    app:chipIcon="@drawable/ic_baseline_today_24"
                    app:chipIconSize="18dp"
                    app:chipStartPadding="12dp"
                    app:layout_constraintEnd_toEndOf="@+id/tomorrow_chip"
                    app:layout_constraintStart_toStartOf="@+id/tomorrow_chip"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tomorrow_chip"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tomorrow"
                    app:chipEndPadding="12dp"
                    app:chipIcon="@drawable/ic_baseline_wb_sunny_24"
                    app:chipIconSize="18dp"
                    app:chipStartPadding="12dp"
                    app:layout_constraintEnd_toEndOf="@+id/next_week_chip"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/next_week_chip"
                    app:layout_constraintTop_toBottomOf="@+id/today_chip" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/next_week_chip"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/next_week"
                    app:chipEndPadding="12dp"
                    app:chipIcon="@drawable/ic_baseline_next_week_24"
                    app:chipIconSize="18dp"
                    app:chipStartPadding="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tomorrow_chip" />

                <CalendarView
                    android:id="@+id/calendar_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/next_week_chip" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>